# rail1

./: .coverage  .coveragerc  .gitignore  README.md  data.npy  pyproject.toml  slurm_job.sh
env/: py310.yaml  py310_pyg230_cu115.yaml  py310_pyg230_cu117.yaml  py310_pyg230_cu121.yaml
lib/pctools/: Cargo.toml  pyproject.toml
lib/pctools/notebooks/: test.ipynb
lib/pctools/python/pctools/: wrapper.py
lib/pctools/src/: lib.rs
lib/rail1/: requirements.txt  setup.py  setup.sh
rail1/: __init__.py  fire.py
rail1/argparse/: argparse.py
rail1/callbacks/: checkpoint.py
rail1/data/: batchloader.py  samplers.py
rail1/datasets/: __init__.py  cifar10.py
rail1/loggers/: loggers.py
rail1/metrics/: metrics.py
rail1/optimizers/: __init__.py
rail1/run/: devrun.py  run.py
rail1/test/: discover_tests.py
rail1/trainer/: trainer.py
rail1/training/: fit.py
rail1/utils/: __init__.py  bash.py  load_module.py  namespace.py  printing.py  recursive_glob.py  versioning.py
src/cnf/: activate.sh  bunny.py  fps.py  gp.py  mnist.ipynb  mnist_autoencoder.py  mnist_equivariant.ipynb  mnist_equivariant_1.ipynb  mnist_field_decoder.py  modelnet40_clf.py  modelnet40_clf_test.py  modelnet40ply_clf.py  modelnet40stf_clf.py  modelnet_iae_svm.py  pct.py  random_points_ae.py  random_shapes_rec.py  random_shapes_reg.py  random_shapes_suprec.py  random_spheres_rec.py  random_spheres_suprec.py  requirements.txt  (+9 more)
templates/: activate.sh
tests/: test_argparse.py  test_datasets.py  test_fire.py  test_fit.py  test_reproducibility.py  test_run.py  test_utils.py  test_versioning.py
(+266 files in other folders)
