[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rail1"
version = "1.0.0"
authors = [{ name = "" }]
dependencies = []

[project.scripts]
discover_tests = "rail1.test.discover_tests:main"
run = "rail1.run.run:main"
devrun = "rail1.run.devrun:main"

[tool.setuptools]
packages = ["rail1"]
